# ch347-rs

./: '  .gitignore  1  Cargo.toml  README.md
examples/: ap_idr.rs  demo.rs  find_interface.rs  gpio_rw.rs  idcode_stm32.rs  idcode_swd.rs  iic.rs  mpu6050.rs  soft_swd.rs  spi_t.rs  ssd1306.rs
examples/i2c/: Cargo.toml
examples/i2c/src/: main.rs
examples/spi/: Cargo.toml
examples/spi/src/: main.rs
src/: ch347.rs  command.rs  gpio.rs  hal.rs  iic.rs  lib.rs  spi.rs  usb_util.rs
src/gpio/: mod.rs
src/i2c/: mod.rs
src/jtag/: mod.rs
src/spi/: mod.rs
src/swd/: mod.rs
